# Computer-Graphics---University-of-California-Davis

p1/: ecs175 p1.txt  main.cpp  metadata.yml  readme  test.txt
p2/: Chreno.sln  README.txt  readme
p2/Chreno/: Application.cpp  Camera.cpp  Camera.h  Chreno.vcxproj  Chreno.vcxproj.filters  Engine.cpp  Engine.h  Entity.cpp  Entity.h  EntityInstance.cpp  EntityInstance.h  EntityManager.cpp  EntityManager.h  GL_Dependencies.h  IndexBuffer.cpp  IndexBuffer.h  MathUtil.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Singleton.h  Transform.cpp  Transform.h  UIManager.cpp  UIManager.h  UI_TransformEditor.cpp  UI_TransformEditor.h  VertexArray.h  VertexBuffer.h  (+4 more)
p3/: CMakeLists.txt  imgui.ini  main.cpp  metadata.yml  readme
p3/Chreno/: Application.cpp  Application.h  Camera.cpp  Camera.h  Chreno.vcxproj  Engine.cpp  Engine.h  Entity.cpp  EntityInstance.h  Image.cpp  IndexBuffer.cpp  MathUtil.cpp  Mesh.cpp  Renderer.cpp  Renderer.h  Shader.h  Texture.h  Transform.cpp  Transform.h  UIManager.cpp  UI_SimpleEditor.cpp  UI_SimpleEditor.h  VertexBufferLayout.cpp  VertexBufferLayout.h  a.out  imgui.ini
p3/Chreno/Assets/Shaders/: Basic.shader
p4/: CMakeLists.txt  README.txt  main.cpp  metadata.yml  readme
p5/: CMakeLists.txt  README.md  main.cpp  metadata.yml  readme
p5/RayTracer/: Shader.cpp  Shader.h  camera.h  color.h  cube.h  hittable.h  hittable_list.h  light.h  material.h  perlin.h  plane.h  ray.h  rtweekend.h  sphere.h  tetrahedron.h  texture.h  triangle.h  vec3.h  xmlload.h
p5/RayTracer/Shader/: Default.shader
p5/RayTracer/inputs/: scene1.xml
(+43 files in other folders)
